--- a/devenir-partenaire.html
+++ b/devenir-partenaire.html
@@ -25,7 +25,7 @@
                             <a href="nm3.html">NM3</a>
                             <a href="planning.html">Planning Entrainements</a>
                             <a href="tarifs.html">Tarifs Cotisations</a>
-                            <a href="championnats.html">Les Championnats</a>
+                            <a href="https://competitions.ffbb.com/ligues/occ/comites/1166/clubs/occ1166560" target="_blank">Les Championnats</a>
                             <a href="vie-club.html">Participation Vie du Club</a>
                         </div>
                     </li>
@@ -50,7 +50,9 @@
                     </li>
                     <li><a href="contacts.html">Contacts</a></li>
                 </ul>
-                 
+                <div class="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </div>
             </nav>
         </div>
     </header>
@@ -152,6 +154,16 @@
                             <h4>Concrétisez votre soutien</h4>
                             <p>Après validation, nous mettons en place les actions définies ensemble.</p>
                         </div>
+                    </div>
+                </div>
+                
+                <div class="plaquette-partenaire">
+                    <h3>Notre plaquette partenaires</h3>
+                    <p>Découvrez notre plaquette partenaires détaillant toutes nos offres, les différentes formules de visibilité et l'impact de votre soutien sur le développement du club.</p>
+                    <div class="plaquette-download">
+                        <a href="https://drive.google.com/file/d/1AHfUSUVva9Bv__Wi3s674df59XQ64out/view" target="_blank" class="btn primary">
+                            <i class="fas fa-download"></i> Télécharger la plaquette partenaires
+                        </a>
                     </div>
                 </div>
             </div>
