--- a/equipes-2024-25.html
+++ b/equipes-2024-25.html
@@ -25,15 +25,13 @@
                             <a href="nm3.html">NM3</a>
                             <a href="planning.html">Planning Entrainements</a>
                             <a href="tarifs.html">Tarifs Cotisations</a>
-                            <a href="championnats.html">Les Championnats</a>
-                            <a href="vie-club.html">Participation Vie du Club</a>
                         </div>
                     </li>
                     <li><a href="club-formateur.html">Club Formateur</a></li>
                     <li><a href="boutique.html">Boutique</a></li>
                     <li><a href="calendar.html">Calendrier</a></li>
                     <li class="dropdown">
-                        <a href="javascript:void(0)" class="active">Nos Équipes</a>
+                        <a href="equipes-2024-25.html" class="active">Nos Équipes</a>
                         <div class="dropdown-content">
                             <a href="equipes-2024-25.html" class="active">Saison 2024/25</a>
                             <a href="equipes-2023-24.html">Saison 2023/24</a>
@@ -50,9 +48,7 @@
                     </li>
                     <li><a href="contacts.html">Contacts</a></li>
                 </ul>
-                <div class="mobile-menu-button">
-                    <i class="fas fa-bars"></i>
-                </div>
+                 
             </nav>
         </div>
     </header>
