--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
                             <a href="nm3.html">NM3</a>
                             <a href="planning.html">Planning Entrainements</a>
                             <a href="tarifs.html">Tarifs Cotisations</a>
-                            <a href="https://competitions.ffbb.com/ligues/occ/comites/1166/clubs/occ1166560" target="_blank">Les Championnats</a>
-                            <a href="vie-club.html">Participation Vie du Club</a>
                         </div>
                     </li>
                     <li><a href="club-formateur.html">Club Formateur</a></li>
                     <li><a href="boutique.html">Boutique</a></li>
                     <li><a href="calendar.html">Calendrier</a></li>
                     <li class="dropdown">
-                        <a href="javascript:void(0)">Nos Équipes</a>
+                        <a href="equipes-2024-25.html">Nos Équipes</a>
                         <div class="dropdown-content">
                             <a href="equipes-2024-25.html">Saison 2024/25</a>
                             <a href="equipes-2023-24.html">Saison 2023/24</a>
@@ -81,7 +79,7 @@
                 <i class="fas fa-medal"></i>
                 <h3>Club Formateur</h3>
                 <p>Notre ambition, la formation. Découvrez notre programme de formation reconnu.</p>
-                <img src="https://images.pexels.com/photos/3755438/pexels-photo-3755438.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Jeunes joueurs" class="feature-img">
+                <img src="https://imgresizer.eurosport.com/unsafe/1200x0/filters:format(jpeg)/origin-imgresizer.eurosport.com/2014/09/12/1312082-28234821-2560-1440.jpg" alt="Jeunes joueurs" class="feature-img">
                 <a href="club-formateur.html" class="btn-small">En savoir plus</a>
             </div>
             <div class="feature-box">
@@ -95,7 +93,7 @@
                 <i class="fas fa-users"></i>
                 <h3>Rejoignez-nous</h3>
                 <p>Chaque saison plus de 250 joueurs de 4 à 77 ans portent fièrement nos couleurs.</p>
-                <img src="https://images.pexels.com/photos/8224157/pexels-photo-8224157.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Rejoignez-nous" class="feature-img">
+                <img src="images/photos/rejoin.png" alt="Rejoignez-nous" class="feature-img">
                 <a href="tarifs.html" class="btn-small">S'inscrire</a>
             </div>
         </div>
