--- a/nm3.html
+++ b/nm3.html
@@ -25,15 +25,13 @@
                             <a href="nm3.html" class="active">NM3</a>
                             <a href="planning.html">Planning Entrainements</a>
                             <a href="tarifs.html">Tarifs Cotisations</a>
-                            <a href="championnats.html">Les Championnats</a>
-                            <a href="vie-club.html">Participation Vie du Club</a>
                         </div>
                     </li>
                     <li><a href="club-formateur.html">Club Formateur</a></li>
                     <li><a href="boutique.html">Boutique</a></li>
                     <li><a href="calendar.html">Calendrier</a></li>
                     <li class="dropdown">
-                        <a href="javascript:void(0)">Nos Équipes</a>
+                        <a href="equipes-2024-25.html">Nos Équipes</a>
                         <div class="dropdown-content">
                             <a href="equipes-2024-25.html">Saison 2024/25</a>
                             <a href="equipes-2023-24.html">Saison 2023/24</a>
